[workspace]
members = [
    "monoio-http",
    "hyper-http",
]
resolver = "3"

[workspace.dependencies]
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1"
httparse = "1.10.1"
httpdate = "1.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
monoio = "0.2.4"
tokio = { version = "1", features = ["full"] }
